[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/Fonts/Rutaban24.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/UI/Menu/CreditsMenu.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Fonts/Rutaban.tres" type="DynamicFont" id=3]

[node name="CreditsMenu" type="Panel"]
margin_left = 192.0
margin_top = 64.0
margin_right = 832.0
margin_bottom = 448.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="."]
margin_left = 256.0
margin_top = 336.0
margin_right = 384.0
margin_bottom = 368.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 624.0
margin_bottom = 320.0
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="." to="." method="_on_CreditsMenu_visibility_changed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
